# audio-proctor

./: .gitignore  2Person_Audio_diarization_report.json  2Person_Audio_diarization_report.txt  KrushangSampleAudio_diarization_report.json  KrushangSampleAudio_diarization_report.txt  STEP2_SPEAKER_DIARIZATION.md  generate_test_audio.py  main.py  pyproject.toml  recAud.py  speaker_diarization.py  vad_step1_V1.py  vad_step1_v2.py  vad_stream.py  vad_stream_silero.py
