[project]
name = "audio-proctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "noisereduce>=3.0.3",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "setuptools>=82.0.0",
    "sounddevice>=0.5.5",
    "webrtcvad>=2.0.10",
]
