[project]
name = "audio-proctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "noisereduce>=3.0.3",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "setuptools<81",
    "sounddevice>=0.5.5",
    "webrtcvad>=2.0.10",
    "silero-vad>=5.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "onnxruntime>=1.15.0",
    "librosa>=0.10.0",
    "scikit-learn>=1.3.0",
]

[tool.uv.workspace]
members = [
    "claude-audio",
]
